syntax = "proto3";

package cosmos.sdk.grpc.abci.v1;

option go_package           = "github.com/cosmos/cosmos-sdk/streaming/plugins/abci/grpc_abci_v1";
option java_multiple_files  = true;
option java_outer_classname = "AbciListenerProto";
option java_package         = "network.cosmos.sdk.grpc.abci.v1";

// ListenRequest is used for storing ABCI request and response
// and Store KV data for streaming to external grpc service.
message ListenRequest {
  int64  block_height = 1;
  string event_type   = 2;
  bytes  data         = 3;
}

message Empty {}

service ABCIListenerService {
  rpc Listen(ListenRequest) returns (Empty);
}
